@@ -7,6 +7,7 @@ Trunk - unreleased changes
   NEW FEATURES
 
   IMPROVEMENTS
+    HIVE-389. Option to build without ivy (jssarma)
 
   OPTIMIZATIONS
 
